Fix table overflow, show paginator if there're pages, fix tab name

--- a/src/Pckg/Dynamic/public/less/bootstrap.less
+++ b/src/Pckg/Dynamic/public/less/bootstrap.less
@@ -42,7 +42,7 @@ table.table td {
 }
 
 .pckg-maestro-tabelize > [class^='pckg-maestro-table-'] {
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: hidden;
   width: 100%;
 }
